# sam-medical

./: .gitignore  .gitmodules  README.md  configs.yaml  plots.py  preprocessing.py  pyproject.toml  requirements.txt  segment.py
api/v1/: configs.yaml  get_models.py
